--- a/_config.yml
+++ b/_config.yml
@@ -108,18 +108,21 @@ author:
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+        url: "https://github.com/amolgawai"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+        url: "https://www.linkedin.com/in/amolgawai/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
+        url: "https://twitter.com/amolgawai10"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      # url: "https://github.com/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+        url: "https://www.instagram.com/pixocraphy_by_amol/"
 
 # Site Footer
 footer:
